--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ ul{
 }
 .appBarItems a {
     font-size: small;
-    color: white;
+    color: black;
     padding-left: 20px;
     padding-right: 20px;
 }
@@ -204,7 +204,7 @@ ul{
     cursor: pointer;
     padding-right: 20px;
     padding-left: 20px;
-    color: white;
+    color: black;
 }
 
 .big_txt{
@@ -256,7 +256,7 @@ ul{
     display: block;
 }
 
-.appBarItems a {
+#title {
     display: none;
 }
 
